tests/should_fail/syntax_void_in_list.nv
module main

// SHOULD FAIL: void expression used inside a list literal
fn noop() {}
let xs = [noop(), noop()]
println(xs)
